bug fixes; now copies the ISO to the USB drive and gets rid of several compiler warnings

--- a/README
+++ b/README
@@ -13,3 +13,4 @@ I created this tool, if you care, for several reasons:
 That being said, it does have a few shortcomings:
 
 1) Linux fails to have graphics on some Macs (i.e Macbook Pros with nVidia graphics), which in some cases prevents boot, but this is not necessarily an issue with Mac Linux USB Loader as much as it is an issue with the video drivers that ship with most distros.
+2) It only detects up to 10 USB ports. I chose 10 because it is unlikely someone will have more ports than that. If they do, then maybe I'll do something about it, but the only computer I've even seen that had more than a few ports was a desktop PC with six, but given that PCs do not run OS X that would not really limit us anyway.
